# clean-api-generator

./: README.md
domain/: script.py
domain/template/: main.cpp
domain/template/domain_name/adapters/in/web/: add-domain_name.controller.cpp  add-domain_name.controller.h  get-domain_name.controller.cpp  get-domain_name.controller.h  remove-domain_name.controller.cpp
domain/template/domain_name/core/application/services/: add-domain_name.service.cpp  get-domain_names.service.cpp  remove-domain_name.service.cpp
domain/template/references/openapi/: domain_name_openapi.yaml
link/: script.py
link/template/: CMakeLists.txt  main.cpp
link/template/domain_name-target_name/adapters/in/web/: get-domain_name-target_names.controller.cpp  get-domain_name-target_names.controller.h  link-domain_name-target_name.controller.cpp  link-domain_name-target_name.controller.h  unlink-domain_name-target_name.controller.cpp  unlink-domain_name-target_name.controller.h
link/template/domain_name-target_name/core/application/ports/in/: get-domain_name-target_names.input-port.h  link-domain_name-target_name.input-port.h  unlink-domain_name-target_name.input-port.h
link/template/domain_name-target_name/core/application/services/: get-domain_name-target_names.service.cpp  get-domain_name-target_names.service.h  link-domain_name-target_name.service.cpp  link-domain_name-target_name.service.h  unlink-domain_name-target_name.service.cpp  unlink-domain_name-target_name.service.h
link/template/references/openapi/: domain_name_target_name_openapi.yaml
link/template/references/tests/: Insomnia_project.json
template/: CMakeLists.txt
template/domain_name/adapters/in/web/: get-domain_names.controller.cpp  get-domain_names.controller.h  remove-domain_name.controller.h
template/domain_name/core/application/ports/in/: add-domain_name.input-port.h  get-domain_name.input-port.h  get-domain_names.input-port.h  remove-domain_name.input-port.h
template/domain_name/core/application/services/: add-domain_name.service.h  get-domain_name.service.cpp  get-domain_name.service.h  get-domain_names.service.h  remove-domain_name.service.h
template/domain_name/core/domain/: domain_name.h
